Remove parentheses from chart text

--- a/index.html
+++ b/index.html
@@ -121,11 +121,29 @@
                         <p>デジタル化・少子化で危機にある地域の写真館のビジネスを再興。</p>
                     </div>
                 </div>
-                <div class="market-data" style="margin-top: 3rem; text-align: center;">
-                    <img src="market_data.png" alt="写真業界の市況データ"
-                        style="max-width: 100%; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
-                    <p style="font-size: 0.9rem; color: #666; margin-top: 0.5rem;">※ 写真業界の市況について</p>
+
+                <!-- Market Context Summary -->
+                <div class="market-summary-box">
+                    <h4 class="box-title">WHY NOW? - 変革が求められる背景</h4>
+                    <div class="summary-grid">
+                        <div class="summary-item alert">
+                            <h5>深刻な「人手不足」と「倒産増加」</h5>
+                            <p>写真館の倒産は近年急増。採用難による慢性的な人手不足が、経営を圧迫しています。</p>
+                        </div>
+                        <div class="summary-item cycle">
+                            <h5>「負」の連鎖</h5>
+                            <ul class="cycle-list">
+                                <li><span>📉</span> 事務・編集による業務逼迫</li>
+                                <li><span>🔻</span> 撮影・営業時間の減少</li>
+                                <li><span>⚠️</span> 売上低下・後継者不足</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="summary-footer">
+                        <p><strong>この厳しい市況に共に立ち向かう「相互パートナー」が必要です。</strong></p>
+                    </div>
                 </div>
+
                 <p style="margin-top: 2rem;">
                     私たちはソリューションを通じて、日本の教育の質を左右する、まさに国家レベルの課題解決になると信じています。
                 </p>
@@ -143,7 +161,7 @@
                         単なるプロダクトのプッシュ型営業ではなく、エリア全体の教育インフラをどう底上げするかを考える、非常に視座の高いコンサルのような仕事です。
                     </p>
                     <p>
-                        <strong>扱い数字の大きさも醍醐味です。</strong>
+                        <strong>扱う数字の大きさも醍醐味です。</strong>
                         時には、その写真館の売上の7割を私たちのソリューションが支えることも珍しくありません。手数料設計や個社ごとの柔軟なプランニングを自ら判断し、年間で数億円規模の予算を動かし、地域のデファクトスタンダードを創り上げる。プロフェッショナルとして、これほど面白い環境はないと自負しています。
                     </p>
                 </div>
@@ -163,10 +181,43 @@
                         例えば「アルバムBPO」による制作代行で業務負担を劇的に削減したり、先生の負担を減らすICTシステムを提案したり。
                         われわれがコンサルするのは、一社一社の写真館の「時間の使いかた」を変え、経営をデザインするという非常にクリエイティブな仕事です。
                     </p>
-                    <div class="impact-image" style="margin-top: 3rem; text-align: center;">
-                        <img src="consulting_impact.png" alt="業務割合の改善イメージ"
-                            style="max-width: 100%; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
-                        <p style="font-size: 0.9rem; color: #666; margin-top: 0.5rem;">※ 写真館様のポテンシャル解放イメージ</p>
+
+                    <!-- Consulting Impact Visual -->
+                    <div class="impact-comparison">
+                        <h4 class="box-title">ポテンシャルの解放</h4>
+                        <p class="impact-desc">トータルサポートにより「本来注力すべき業務」へ時間をシフトします。</p>
+
+                        <div class="comparison-container">
+                            <div class="comp-box before">
+                                <span class="label">Before</span>
+                                <div class="bar-container">
+                                    <div class="bar creative" style="flex: 2;">
+                                        <span class="bar-label">撮影・営業</span>
+                                    </div>
+                                    <div class="bar admin" style="flex: 8;">
+                                        <span class="bar-label">編集・制作・事務<br><small>多忙</small></span>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="arrow-box">
+                                <span class="arrow">▶▶</span>
+                                <span class="arrow-text">SENの<br>導入</span>
+                            </div>
+
+                            <div class="comp-box after">
+                                <span class="label">After</span>
+                                <div class="bar-container">
+                                    <div class="bar creative" style="flex: 8;">
+                                        <span
+                                            class="bar-label"><strong>撮影・営業・企画</strong><br><small>収益・価値向上</small></span>
+                                    </div>
+                                    <div class="bar admin" style="flex: 2;">
+                                        <span class="bar-label">事務</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
